# term_select

./: .gitignore  Cargo.toml  README.md
examples/: cargo_menu.rs  hello_menu.rs  sub_menu.rs
src/: err.rs  lib.rs  selector.rs  term_utils.rs
